Push latest updates

--- a/assets/style.css
+++ b/assets/style.css
@@ -589,6 +589,18 @@ footer {
   .back-to-guide a:hover {
     color: #004b99;
   }
+
+  a {
+    color: #FF6600;
+    text-decoration: none;
+    font-weight: 500;
+  }
+  
+  a:hover {
+    color: #E65C00;
+    text-decoration: underline;
+  }
+  
   
   /* Responsive Navigation */
 .menu-toggle {
